FullQa New/src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Avalara Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Disqualified</fullName>
        </values>
        <values>
            <fullName>Inquiry</fullName>
        </values>
        <values>
            <fullName>MQL</fullName>
        </values>
        <values>
            <fullName>Nurture</fullName>
        </values>
        <values>
            <fullName>Processing</fullName>
        </values>
        <values>
            <fullName>Suspect</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ACPNurture__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is checked only the ACP Team may edit the record.</description>
        <inlineHelpText>If this is checked only the ACP Team may edit the record.</inlineHelpText>
        <label>ACP Nurture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACP_Conversion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Purpose: Identify all Leads/Account/Contact affected during ACP Conversion/Restructure
Integrated: No 
Change: Level 1
Custodian: Liz Anderson/Brandon Houk</description>
        <label>ACP Conversion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACP_Firm_Size__c</fullName>
        <label>ACP Firm Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Top 6</fullName>
                </value>
                <value>
                    <fullName>Top 100</fullName>
                </value>
                <value>
                    <fullName>Mid</fullName>
                </value>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Bookkeepers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Qualified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ACP Qualified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACP_Task_to_Inside_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACP Task to Inside Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_action_required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This lead requires some action be taken by a rep</description>
        <label>Conversica Action Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_action_required_date__c</fullName>
        <description>The date and time it was determined action is required</description>
        <label>Conversica Action Required Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_confirmed_phone_1__c</fullName>
        <description>The lead&apos;s phone number as verified or discovered by Conversica</description>
        <label>Conversica Confirmed Phone 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_confirmed_phone_2__c</fullName>
        <description>The lead&apos;s phone number as verified or discovered by Conversica</description>
        <label>Conversica Confirmed Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_stage__c</fullName>
        <description>The current stage of the Conversica Conversation</description>
        <label>Conversation Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_stage_date__c</fullName>
        <description>The date and time the current Conversation Stage changed</description>
        <label>Conversation Stage Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_status__c</fullName>
        <description>The current status of the Conversica Conversation</description>
        <label>Conversation Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_status_date__c</fullName>
        <description>The date and time the current Conversation Status was set</description>
        <label>Conversation Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_status_detail__c</fullName>
        <label>Deprecated Conversation Status Detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_status_detail_date__c</fullName>
        <label>Deprecated Status Detail Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversica_lead_status__c</fullName>
        <description>The current status of the lead in Conversica</description>
        <label>Conversica Lead Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversica_lead_status_date__c</fullName>
        <description>The date and time the current Conversation status was set</description>
        <label>Conversica Lead Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_date_added__c</fullName>
        <description>The date and time Conversica received the lead</description>
        <label>Conversica Date Added</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_discovered_email_1__c</fullName>
        <description>If a new email address is discovered in a Lead&apos;s response, this field will be populated with the additional email address.</description>
        <inlineHelpText>If a new email address is discovered in a Lead&apos;s response, this field will be populated with the additional email address.</inlineHelpText>
        <label>Conversica Discovered Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_discovered_email_2__c</fullName>
        <description>If a second new email address is discovered in a Lead’s response, this field will be populated with the additional email address</description>
        <inlineHelpText>If a second new email address is discovered in a Lead’s response, this field will be populated with the additional email address</inlineHelpText>
        <label>Conversica Discovered Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_discovered_name__c</fullName>
        <description>If a new first name is discovered in a Lead’s response, this field will be populated with the preferred first name.</description>
        <inlineHelpText>If a new first name is discovered in a Lead’s response, this field will be populated with the preferred first name.</inlineHelpText>
        <label>Conversica Discovered Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_first_message_date__c</fullName>
        <description>The date and time Conversica first sent a message to the lead</description>
        <label>Conversica First Message Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_further_action__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the Lead is determined by your Conversica Assistant to have further questions or that they are waiting on actions from their assigned contact.</description>
        <inlineHelpText>Checked if the Lead is determined by your Conversica Assistant to have further questions or that they are waiting on actions from their assigned contact.</inlineHelpText>
        <label>Conversica Further Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_further_action_date__c</fullName>
        <description>Date and time the Lead became a Conversica Further Action lead.</description>
        <inlineHelpText>Date and time the Lead became a Conversica Further Action lead.</inlineHelpText>
        <label>Conversica Further Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_hot_lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The lead is ready to be contacted by a rep</description>
        <label>Conversica Hot Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_hot_lead_date__c</fullName>
        <description>The date and time the lead became &quot;Hot&quot; in Conversica</description>
        <label>Conversica Hot Lead Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_last_message_date__c</fullName>
        <description>The date and time Conversica last sent a message to the lead</description>
        <label>Conversica Last Message Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_last_response_date__c</fullName>
        <description>The date and time Conversica last received a response from the lead</description>
        <label>Conversica Last Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_lead_at_risk__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The lead may lose interest if not contacted soon by a rep</description>
        <label>Conversica Lead At Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_lead_at_risk_date__c</fullName>
        <description>The date and time the lead became &quot;At Risk&quot; in Conversica</description>
        <label>Conversica Lead At Risk Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_lead_profile__c</fullName>
        <description>A link to the Conversica Lead Profile page for the selected Lead.</description>
        <inlineHelpText>A link to the Conversica Lead Profile page for the selected Lead.</inlineHelpText>
        <label>Conversica Lead Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_options__c</fullName>
        <description>Options field for this object in Conversica</description>
        <label>Conversica Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stop</fullName>
                </value>
                <value>
                    <fullName>Skip to follow-up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_score__c</fullName>
        <description>The Conversica Score of a lead.</description>
        <label>Deprecated Conversica Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Grey</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_sms_opt_out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the Lead indicates they would no longer like to be messaged via SMS after having previously opted in.</description>
        <inlineHelpText>Checked if the Lead indicates they would no longer like to be messaged via SMS after having previously opted in.</inlineHelpText>
        <label>Conversica SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_status__c</fullName>
        <description>Status of an Conversica lead in the Conversica system</description>
        <label>Deprecated Conversica Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Queue</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
                <value>
                    <fullName>Undeliverable</fullName>
                </value>
                <value>
                    <fullName>AVA Stopped</fullName>
                </value>
                <value>
                    <fullName>Client Stopped</fullName>
                </value>
                <value>
                    <fullName>Messaging</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Awaiting Response</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Conversica Stopped</fullName>
                </value>
                <value>
                    <fullName>Preparing Lead</fullName>
                </value>
                <value>
                    <fullName>Sent Engagement</fullName>
                </value>
                <value>
                    <fullName>Sent Appt.</fullName>
                </value>
                <value>
                    <fullName>Sent Feedback</fullName>
                </value>
                <value>
                    <fullName>Sent Social</fullName>
                </value>
                <value>
                    <fullName>Received Engagement</fullName>
                </value>
                <value>
                    <fullName>Received Appt.</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Received Social</fullName>
                </value>
                <value>
                    <fullName>Messaging Complete</fullName>
                </value>
                <value>
                    <fullName>Unsubscribed</fullName>
                </value>
                <value>
                    <fullName>Opt Out</fullName>
                </value>
                <value>
                    <fullName>Rep Stopped</fullName>
                </value>
                <value>
                    <fullName>CRM Stopped</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AVA__Campaign__c</fullName>
        <label>Deprecated Conversica Campaign</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>EZTax</description>
        <label>EZTax Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (EZTax Account)</relationshipLabel>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accounting_Financial_Professional__c</fullName>
        <description>Answers the question:  Are you a certified accounting/financial professional
- in industry
- in an accounting firm
- I am not a certified accounting/financial professional</description>
        <label>(Deprecated) Accounting/Financial</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In an accounting firm</fullName>
                </value>
                <value>
                    <fullName>In industry</fullName>
                </value>
                <value>
                    <fullName>I am not a certified accounting/financial professional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AdditionalInformation__c</fullName>
        <description>Purpose: Used to capture miscellaneous or free form information about this lead
Integrated: Yes (Lead Forms)
Change: Level 1
Custodian: AvaTax VP Marketing Demand Gen</description>
        <inlineHelpText>Used to capture miscellaneous or free form information about this lead</inlineHelpText>
        <label>Additional Information</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Connector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Purpose: Inbound lead additional connector
Integrated: No 
Change: Level 0 
Custodian: AvaTax VP Marketing Demand Gen</description>
        <inlineHelpText>The additional (non primary) connector associated with this lead</inlineHelpText>
        <label>Additional Connector</label>
        <referenceTo>Connector__c</referenceTo>
        <relationshipLabel>Leads (Additional Connector)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>IF( ISBLANK( Property_Address_1__c ), &quot;&quot;, Property_Address_1__c &amp; IF(ISBLANK(Property_Address_2__c), &quot;&quot;, &quot;,  &quot; &amp; Property_Address_2__c) &amp; &quot;, &quot; &amp;  Property_City__c &amp; &quot;, &quot; &amp;  Property_State__c  &amp; &quot; &quot; &amp;  Property_Postal_Code__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adobe_Visitor_ID__c</fullName>
        <label>Adobe Visitor ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>((TODAY()-  Birth_Date__c  )-MOD(TODAY()- Birth_Date__c ,365.25))/365.25</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(Deprecated) Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_category__c</fullName>
        <formula>IF( Age__c&lt;20,&quot;&lt; 20&quot;,  IF( Age__c&lt;25,&quot;20 to 25&quot;,  IF( Age__c&lt;30,&quot;25 to 30&quot;,  IF( Age__c&lt;35,&quot;30 to 35&quot;,  IF( Age__c&lt;40,&quot;35 to 40&quot;,  IF( Age__c&lt;45,&quot;40 to 45&quot;,  IF( Age__c&lt;50,&quot;45 to 50&quot;,  IF( Age__c&lt;55,&quot;50 to 55&quot;,  IF( Age__c&lt;60,&quot;55 to 60&quot;,  IF( Age__c&gt;=60,&quot;60 and +&quot;,&quot;&quot;))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(Deprecated) Age category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_Code_RSM_Region__c</fullName>
        <description>Used by Distribution engine to route leads based on area code. I populated by workflow rules.</description>
        <label>Area Code RSM Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Northwest</fullName>
                </value>
                <value>
                    <fullName>Southwest</fullName>
                </value>
                <value>
                    <fullName>Northeast</fullName>
                </value>
                <value>
                    <fullName>Southeast</fullName>
                </value>
                <value>
                    <fullName>North Central</fullName>
                </value>
                <value>
                    <fullName>South Central</fullName>
                </value>
                <value>
                    <fullName>Mid-Atlantic</fullName>
                </value>
                <value>
                    <fullName>Great Lakes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area_Code__c</fullName>
        <description>Purpose: Get Area code only from phone number for Geo Routing
Integrated: Yes, used to populate region on lead via lookup helper job
Change Level: 1
Sales Operations  &amp; Lead gen</description>
        <formula>Left(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, &quot; &quot;, &quot;&quot;), &quot;+&quot;, &quot;&quot;), &quot;(&quot;, &quot;&quot;),&quot;)&quot;,&quot;&quot;), &quot;-&quot;, &quot;&quot;),3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authority_2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Copy of Authority field: Checked if a lead has the appropriate authority to engage Avalara in the Sales  Cycle
Integrated: Yes, populated by workflow and mapped from lead to Contact on conversion
Marketing: Saara J.</description>
        <label>Authority (2)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Authority__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if a Lead has the appropriate authority to engage Avalara in the Sales cycle</description>
        <inlineHelpText>Checked if a Lead has the appropriate authority to engage Avalara in the Sales cycle</inlineHelpText>
        <label>Authority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AvaRatesNowUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(Deprecated) AvaRatesNowUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Back_Office_System__c</fullName>
        <description>Purpose: Track the excise system for excise integrations
Integrated: No 
Change: Level 0 
Custodian: VP Marketing Excise</description>
        <inlineHelpText>Specify the back office system associated with the excise platform</inlineHelpText>
        <label>Back-Office System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amphora Symphony</fullName>
                </value>
                <value>
                    <fullName>CMI Petrocycle</fullName>
                </value>
                <value>
                    <fullName>DM2</fullName>
                </value>
                <value>
                    <fullName>Entero One</fullName>
                </value>
                <value>
                    <fullName>FACTOR</fullName>
                </value>
                <value>
                    <fullName>Firestream</fullName>
                </value>
                <value>
                    <fullName>FuelQuest FMS</fullName>
                </value>
                <value>
                    <fullName>Infor Lawson</fullName>
                </value>
                <value>
                    <fullName>Microsoft Dynamics ASX</fullName>
                </value>
                <value>
                    <fullName>Microsoft Dynamics GP</fullName>
                </value>
                <value>
                    <fullName>Microsoft Dynamics Navision</fullName>
                </value>
                <value>
                    <fullName>OpenLink Right Angle</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>Oracle JD Edwards EnterpriseOne</fullName>
                </value>
                <value>
                    <fullName>PDI</fullName>
                </value>
                <value>
                    <fullName>Pinnacle FuelSmart</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>Sisu PetroMan</fullName>
                </value>
                <value>
                    <fullName>SMARTLogix</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Behavior_Score__c</fullName>
        <description>Purpose: Track the behavioral score associated with this lead
Integrated: Yes (Eloqua)
Change: Level 1
Custodian: AvaTax VP Marketing Demand Gen</description>
        <inlineHelpText>Behavioral score passed into SFDC from Eloqua</inlineHelpText>
        <label>Behavior Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Birth_Date__c</fullName>
        <label>(Deprecated) Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Budget_2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Copy of Budget field: Checked if a lead has the appropriate budget to purchase one or more avalara products
Integrated: Yes Populated by workflow and mapped from lead to contact on conversion
Marketing: Saara J.</description>
        <label>Budget(2)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if a Lead has the appropriate budget to purchase one or more avalara products.</description>
        <inlineHelpText>Checked if a Lead has the appropriate budget to purchase one or more avalara products.</inlineHelpText>
        <label>Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CDM_Email_Address__c</fullName>
        <label>CDM Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CDM_Source_Email__c</fullName>
        <label>CDM Source Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CDM__c</fullName>
        <formula>PartnerName__r.CDM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CDMLookup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNPJ_Tax_ID__c</fullName>
        <description>A field for Brasil to capture their unique tax payor id and is a condition of Lead qualification for the Brazil operation.</description>
        <label>CNPJ (Tax ID)</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CRMSystem__c</fullName>
        <description>The Customer Relationship Management System that a Company uses.</description>
        <inlineHelpText>The Customer Relationship Management System that a Company uses.</inlineHelpText>
        <label>(Deprecated) CRM System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DDM</fullName>
                </value>
                <value>
                    <fullName>Driven CRM</fullName>
                </value>
                <value>
                    <fullName>Lime Light CRM</fullName>
                </value>
                <value>
                    <fullName>Microsoft Dynamics CRM</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Prowess</fullName>
                </value>
                <value>
                    <fullName>SalesForce</fullName>
                </value>
                <value>
                    <fullName>Sugar CRM</fullName>
                </value>
                <value>
                    <fullName>VARCommerce</fullName>
                </value>
                <value>
                    <fullName>Zoho</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cadence_Stage__c</fullName>
        <description>Purpose: Integrated with SalesLoft stages 
Change Level: 1 
Integrated: Yes 
Custodian: Inside Sales/Kim Gordon</description>
        <inlineHelpText>This field is used to identify the stages a Lead flows through in SalesLoft.</inlineHelpText>
        <label>(SL) Cadence Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Cadence_Stage</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CallSquad_Insight_Task_Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CallSquad Insight Task Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CallSquad_Lead_Task_Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CallSquad Lead Task Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CallSquad_Stamped__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Purpose: Call Squad is qualifying lead and creating new tasks
Integrated: Yes
Marketing: Eileen Hansen</description>
        <label>CallSquad Stamped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CampaignAsset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Asset</label>
        <referenceTo>Campaign_Asset__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_MostRecent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign - Most Recent</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads_Most_Recent</relationshipLabel>
        <relationshipName>Leads_Most_Recent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Most_Recent_ID__c</fullName>
        <formula>Campaign_MostRecent__r.CaseSafeID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Most Recent ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Most_Recent_ID_del__c</fullName>
        <description>Campaign ID is Stamped onto Lead record when a Lead is newly associated to a campaign when a campaign member record is create 
Integrated: Yes, used in distribution engine due to lag time of campaign association from eloqua
Excise Marketing: Courtney</description>
        <label>(Deprecated) Campaign Most Recent ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Original__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>First Campaign Lead was associated with,using Rollup Helper via the campaign member created date
Integrated: Yes
Marketing: Jessica Davis</description>
        <inlineHelpText>The first Campaign that this Lead participated in.</inlineHelpText>
        <label>Campaign - Original</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads (Campaign - Original)</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Source__c</fullName>
        <description>Identifies which MailChimp form created lead</description>
        <label>Campaign Source</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseSafeID__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead CaseSafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CertCaptureEvent__c</fullName>
        <label>CertCapture Event</label>
        <length>250</length>
        <type>Text</type>
    </fields>
</CustomObject>